Fix share copy spacing

--- a/src/sass/_nav-tabs.scss
+++ b/src/sass/_nav-tabs.scss
@@ -170,7 +170,9 @@ $nav-items: "colour" "crown" "eyes" "nose" "mouth" "share";
 }
 
 .is-fixed-heigh {
-  height: 90px;
+  @include mq(from, medium) {
+    height: 90px;
+  }
 }
 
 .bx-viewport {
