--- a/src/sass/_placeholders.scss
+++ b/src/sass/_placeholders.scss
@@ -14,6 +14,10 @@
 	@include type-format($type-formatting-p);
 }
 
+%share-copy {
+	@include type-format($type-formatting-share);
+}
+
 %role {
 	@include type-format($type-formatting-role);
 }
