--- a/src/sass/_share.scss
+++ b/src/sass/_share.scss
@@ -1,3 +1,7 @@
+.c-tab__content--share {
+	padding: 1em;
+}
+
 .byb-share-wrapper {
 	@include mq(from, large) {
 		@include span-columns(8);
@@ -18,6 +22,7 @@
 
 	color: #ffffff;
 	background-color: map-deep-get($colours, base, pink);
+	font-size: 14px;
 }
 
 .byb-share-copy {
